{{$NEXT}}

1.302196  2023-10-24 10:27:33-07:00 America/Los_Angeles

    - Fix #882
    - Fix handling of VSTRING and LVALUE refs in is_deeply() #918
    - Merge several doc fixes from mauke

1.302195  2023-04-28 05:55:54-07:00 America/Los_Angeles

    - Fix done_testing(0) producing 2 plans and an incorrect message

1.302194  2023-03-13 20:06:57-07:00 America/Los_Angeles

    - Fix failing test on 5.10

1.302193  2023-03-06 09:38:00-08:00 America/Los_Angeles

    - Deprecate isn't()

1.302192  2023-02-02 07:34:08-08:00 America/Los_Angeles

    - Silence deprecation warning when testing smartmatch

1.302191  2022-07-09 10:48:09-07:00 America/Los_Angeles

    - CI Fixes
    - avoid failing when printing diagnostic info comparing partial overload objects

1.302190  2022-03-04 15:07:45-08:00 America/Los_Angeles

    - Fix subtest times to be hi-res

1.302189  2022-02-24 21:23:05-08:00 America/Los_Angeles

    - Fix #890, #891

1.302188  2021-09-29 08:31:27-07:00 America/Los_Angeles

    - Fix for non-gcc compilers on 5.10.0

1.302187  2021-09-17 06:59:05-07:00 America/Los_Angeles

    - Fix tests for core boolean support

1.302186  2021-07-26 10:37:46-07:00 America/Los_Angeles

    - Add start/stop timestamps to subtests

1.302185  2021-05-19 11:08:39-07:00 America/Los_Angeles

    - Fix test from last commit to pass on older perls

1.302184  2021-05-19 09:19:08-07:00 America/Los_Angeles

    - Fix Test::Builder->skip to stringify arguments

1.302183  2020-10-21 20:10:36-07:00 America/Los_Angeles

    - avoid closing over scalar in BEGIN block in cmp_ok eval

1.302182  2020-10-05 22:02:28-07:00 America/Los_Angeles

    - Fix 5.6 support
    - Fix fragile %INC handling in a test

1.302181  2020-09-14 09:46:04-07:00 America/Los_Angeles

    - put try_sig_mask back where it goes (And add test to prevent this in the future)
    - Drop new List::Util requirement back down

1.302180  2020-09-13 23:11:18-07:00 America/Los_Angeles

    - No changes since last trial
